# E-COMMERCE-MINIMALIST

./: .gitignore  pyproject.toml
core/: settings.py  urls.py
ecommerce/: admin.py  models.py  serializers.py  signals.py  urls.py  views.py
ecommerce/tests/: test_category.py  test_orders.py  test_product.py  test_profile.py
